--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodeman  index.js"
+    "dev":"nodeman  index.js",
+    "start": "node index.js"    
   },
   "author": "",
   "license": "ISC",
